--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.idea
 
 ###> symfony/framework-bundle ###
 /.env.local
@@ -15,8 +16,4 @@
 /phpunit.xml
 ###< symfony/phpunit-bridge ###
 
-###> mutan/docker-for-sf ###
-docker
-docker-compose.yml
 docker-compose.override.yml
-###< mutan/docker-for-sf ###
