--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,8 @@
 ###< symfony/phpunit-bridge ###
 
 docker-compose.override.yml
+
+###> friendsofphp/php-cs-fixer ###
+/.php_cs
+/.php_cs.cache
+###< friendsofphp/php-cs-fixer ###
