--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,7 @@
         "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^2.18",
         "mutan/docker-for-sf": "^1.0",
         "symfony/browser-kit": "^5.2",
         "symfony/css-selector": "^5.2",
