Changed docker configs

--- a/docker/.env
+++ b/docker/.env
@@ -2,23 +2,34 @@
 PUID=1000
 PGID=1000
 
+# NGINX
+NGINX_EXTERNAL_PORT=8001
 
+# PHP
 PHP_VERSION=7.4.15
 COMPOSER_VERSION=2.0.7
 
+#POSTGRES
+POSTGRES_EXTERNAL_PORT=5001
+POSTGRES_PASSWORD=secret1S
+POSTGRES_DB_NAME=app
+POSTGRES_USER_NAME=app
+POSTGRES_USER_PASSWORD=secret1S
 
-NGINX_EXTERNAL_PORT=8080
-POSTGRES_PASSWORD=zappstore
-POSTGRES_USER=zappstore
-POSTGRES_DB=zappstore
+# MYSQL
+MYSQL_EXTERNAL_PORT=3001
+MYSQL_ROOT_PASSWORD=secret1S
+MYSQL_DATABASE=app
+MYSQL_USER=app
+MYSQL_PASSWORD=secret1S
 
-POSTGRES_EXTERNAL_PORT=5433
-MEMCACHED_EXTERNAL_PORT=11212
+# ADMINER
+ADMINER_EXTERNAL_PORT=8002
 
 # GITHUB
 GITHUB_TOKEN=
 
 ###TESTS
-POSTGRES_TEST_USER=zappstoretest
-POSTGRES_TEST_DB=zappstoretest
-POSTGRES_TEST_PASSWORD=zappstoretest
+POSTGRES_TEST_USER=app-test
+POSTGRES_TEST_DB=app-test
+POSTGRES_TEST_PASSWORD=app-test
