--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -14,7 +14,7 @@ services:
             - ../:/srv
             - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
         ports:
-            - 8001:80
+            - ${NGINX_EXTERNAL_PORT}:80
         networks:
             - app-network
 
@@ -36,7 +36,9 @@ services:
         environment:
             APP_ENV: dev
         volumes:
-            - ../:/srv
+            - ..:/srv
+            - ./php/php.ini:/usr/local/etc/php/conf.d/zz-overrides.ini
+            - $HOME/.composer/cache:/home/dev/.composer/cache
         networks:
             - app-network
         depends_on:
@@ -50,12 +52,12 @@ services:
         image: app:postgres
         restart: on-failure
         environment:
-            - POSTGRES_PASSWORD=secret1S
-            - PROJECT_DB_NAME=app
-            - PROJECT_USER_NAME=app
-            - PROJECT_USER_PASSWORD=secret1S
+            - POSTGRES_PASSWORD=$POSTGRES_PASSWORD
+            - POSTGRES_DB_NAME=$POSTGRES_DB_NAME
+            - POSTGRES_USER_NAME=$POSTGRES_USER_NAME
+            - POSTGRES_USER_PASSWORD=$POSTGRES_USER_PASSWORD
         ports:
-            - 5001:5432
+            - ${POSTGRES_EXTERNAL_PORT}:5432
         networks:
             - app-network
 
@@ -65,12 +67,12 @@ services:
         command: --default-authentication-plugin=mysql_native_password
         restart: on-failure
         environment:
-            MYSQL_ROOT_PASSWORD: secret1S
-            MYSQL_DATABASE: app
-            MYSQL_USER: app
-            MYSQL_PASSWORD: secret1S
+            MYSQL_ROOT_PASSWORD: $MYSQL_ROOT_PASSWORD
+            MYSQL_DATABASE: $MYSQL_DATABASE
+            MYSQL_USER: $MYSQL_USER
+            MYSQL_PASSWORD: $MYSQL_PASSWORD
         ports:
-            - 3001:3306
+            - ${MYSQL_EXTERNAL_PORT}:3306
         networks:
             - app-network
 
@@ -79,7 +81,7 @@ services:
         image: adminer:4.7.7-standalone
         restart: always
         ports:
-            - 8002:8080
+            - ${ADMINER_EXTERNAL_PORT}:8080
         networks:
             - app-network
 
