Changed dicker configs

--- a/docker/.env
+++ b/docker/.env
@@ -9,7 +9,7 @@ NGINX_EXTERNAL_PORT=8001
 PHP_VERSION=7.4.15
 COMPOSER_VERSION=2.0.7
 
-#POSTGRES
+# POSTGRES
 POSTGRES_EXTERNAL_PORT=5001
 POSTGRES_PASSWORD=secret1S
 POSTGRES_DB_NAME=app
@@ -29,7 +29,7 @@ ADMINER_EXTERNAL_PORT=8002
 # GITHUB
 GITHUB_TOKEN=
 
-###TESTS
+# TESTS
 POSTGRES_TEST_USER=app-test
 POSTGRES_TEST_DB=app-test
 POSTGRES_TEST_PASSWORD=app-test
