--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -37,7 +37,7 @@ services:
             APP_ENV: dev
         volumes:
             - ..:/srv
-            - ./php/php.ini:/usr/local/etc/php/conf.d/zz-overrides.ini
+            - ./php/php-ini-overrides.ini:/usr/local/etc/php/conf.d/zz-overrides.ini
             - $HOME/.composer/cache:/home/dev/.composer/cache
         networks:
             - app-network
