--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -12,7 +12,7 @@ services:
         restart: on-failure
         volumes:
             - ../:/srv
-            - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+            - ./nginx/dev.conf:/etc/nginx/conf.d/default.conf:ro
         ports:
             - ${NGINX_EXTERNAL_PORT}:80
         networks:
