--- a/docker/php-cli-docker-compose.yml
+++ b/docker/php-cli-docker-compose.yml
@@ -2,7 +2,8 @@ version: "3.7"
 
 networks:
     app-network:
-        name: app-network
+        external:
+            name: app-network
 
 services:
     php-cli:
