--- a/.env
+++ b/.env
@@ -13,6 +13,8 @@
 # Run "composer dump-env prod" to compile .env files for production use (requires symfony/flex >=1.2).
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
+SPORTSDATA_API_KEY=
+
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=21ab9227136b14f4000e43c167fcb68f
