Docker: deleted restart, added MEMCACHED_EXTERNAL_PORT

--- a/docker/.env
+++ b/docker/.env
@@ -26,5 +26,8 @@ MYSQL_PASSWORD=secret1S
 # ADMINER
 ADMINER_EXTERNAL_PORT=8002
 
+# MEMCACHED
+MEMCACHED_EXTERNAL_PORT=11001
+
 # GITHUB
 GITHUB_TOKEN=
