--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -15,7 +15,6 @@ services:
     nginx:
         container_name: app-nginx
         image: nginx:1.19.4
-        restart: on-failure
         volumes:
             - ../:/srv
             - ./nginx/dev.conf:/etc/nginx/conf.d/default.conf:ro
@@ -38,7 +37,6 @@ services:
                 PHP_TYPE: fpm
                 GITHUB_TOKEN: $GITHUB_TOKEN
             target: dev
-        restart: on-failure
         environment:
             APP_ENV: dev
         volumes:
@@ -56,7 +54,6 @@ services:
         container_name: app-postgres
         build: postgres
         image: app:postgres
-        restart: on-failure
         environment:
             - POSTGRES_PASSWORD=$POSTGRES_PASSWORD
             - POSTGRES_DB_NAME=$POSTGRES_DB_NAME
@@ -73,7 +70,6 @@ services:
         container_name: app-mysql
         image: mysql:8.0
         command: --default-authentication-plugin=mysql_native_password
-        restart: on-failure
         environment:
             MYSQL_ROOT_PASSWORD: $MYSQL_ROOT_PASSWORD
             MYSQL_DATABASE: $MYSQL_DATABASE
@@ -89,7 +85,6 @@ services:
     adminer:
         container_name: app-adminer
         image: adminer:4.8.0-standalone
-        restart: always
         ports:
             - ${ADMINER_EXTERNAL_PORT}:8080
         networks:
@@ -98,13 +93,13 @@ services:
     memcached:
         container_name: app-memcached
         image: memcached:1.6.8
-        restart: on-failure
+        ports:
+            - "${MEMCACHED_EXTERNAL_PORT}:11211"
         networks:
             - app-network
 
     redis:
         container_name: app-redis
         image: redis:6.0-buster
-        restart: on-failure
         networks:
             - app-network
