--- a/config/packages/cache.yaml
+++ b/config/packages/cache.yaml
@@ -1,5 +1,7 @@
 framework:
     cache:
+        app: cache.adapter.memcached
+        default_memcached_provider: 'memcached://app-memcached:11211'
         # Unique name of your app: used to compute stable namespaces for cache keys.
         #prefix_seed: your_vendor_name/app_name
 
