--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -22,6 +22,8 @@ services:
             - ${NGINX_EXTERNAL_PORT}:80
         networks:
             - app-network
+        depends_on:
+            - php-fpm
 
     php-fpm:
         container_name: app-php-fpm
